# Custom_Quadruped_RL_Task

./: CLAUDE_HANDOFF.md  README.md  README_LLM_RULES.md  README_LOG.md  README_TLDR.md  pyproject.toml  train_cmd.txt
doggo_tasks/: __init__.py  doggo_cfg.py  flat_env_cfg.py
doggo_tasks.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
doggo_tasks/agents/: rsl_rl_ppo_cfg.py  skrl_flat_ppo_cfg.yaml
doggo_tasks/assets/: doggo_v2.usd
doggo_tasks/mdp/: __init__.py  rewards.py
logs/: latest.path
scripts/: drop_test.py  play.py  train.py
